--- a/Makefile.header
+++ b/Makefile.header
@@ -61,6 +61,24 @@ $(error Supported SUFFIX are .c or .cpp)
 endif
 
 ###################################################
+# Determine compiler name
+#
+COMPILER_NAME := $(shell $(COMPILER) --version | head -1 | cut -d" " -f1)
+
+###################################################
+# Determine compiler version
+#
+ifeq ("$(COMPILER_NAME)","clang")
+COMPILER_VERSION := $(shell $(COMPILER) --version | head -1 | grep -o -E '[0-9]+\.[0-9]+\.[0-9]+' | head -1)
+else ifeq ("$(COMPILER_NAME)","g++")
+COMPILER_VERSION := $(shell $(COMPILER) -dumpversion)
+else ifeq ("$(COMPILER_NAME)","gcc")
+COMPILER_VERSION := $(shell $(COMPILER) -dumpversion)
+else
+COMPILER_VERSION :=
+endif
+
+###################################################
 # Static library
 #
 AR ?= ar
