--- a/Makefile.header
+++ b/Makefile.header
@@ -1,11 +1,11 @@
 # -*- mode: makefile -*-
 ##=====================================================================
-## MyMakefile a generic Makefiles for compiling my github projects.
-## Copyright 2019 Quentin Quadrat <lecrapouille@gmail.com>
+## SimTaDyn: A GIS in a spreadsheet.
+## Copyright 2018 Quentin Quadrat <lecrapouille@gmail.com>
 ##
-## This file is part of MyMakefile.
+## This file is part of SimTaDyn.
 ##
-## MyMakefile is free software: you can redistribute it and/or modify it
+## SimTaDyn is free software: you can redistribute it and/or modify it
 ## under the terms of the GNU General Public License as published by
 ## the Free Software Foundation, either version 3 of the License, or
 ## (at your option) any later version.
@@ -16,20 +16,26 @@
 ## General Public License for more details.
 ##
 ## You should have received a copy of the GNU General Public License
-## along with MyMakefile.  If not, see <http://www.gnu.org/licenses/>.
+## along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.
 ##=====================================================================
 
-include $(M)/Makefile.color
+###################################################
+# Detect the operating system: Unix, OSX and Windows
+# and give a shorter name if needed.
+#
+ifeq ($(OS),Windows_NT)
+ARCHI := Windows
+else
+ARCHI := $(shell uname -s)
+endif
 
 ###################################################
 # Define the directory holding compilation files (*.o ...).
 BUILD ?= build
-INCLUDES += -I$(BUILD)
-VPATH += $(BUILD)
 
 ###################################################
 # Define the directory holding third part libraries that shall be compiled.
-THIRDPART ?= external
+THIRDPART ?= $(P)/external
 
 ###################################################
 # Define the directory holding generated documentation.
@@ -40,8 +46,9 @@ GENDOC ?= doc
 PREFIX ?= /usr
 
 ###################################################
-# Define if the binary is compiled in release (with stripped symbols) or debug mode (with debug symbols)
-BUILD_TYPE ?= debug
+# Select the C++ standard.
+#
+STANDARD ?= --std=c++11
 
 ###################################################
 # Select either a C++ project or a C project.
@@ -49,13 +56,67 @@ BUILD_TYPE ?= debug
 SUFFIX ?= .cpp
 
 ###################################################
-# Select the C++ standard.
-STANDARD ?= --std=c++11
+# Static library
+#
+AR ?= ar
+ARFLAGS ?= crs
 
-ifeq ($(SUFFIX),.cpp)
-COMPILER := $(CXX) $(STANDARD)
-else ifeq ($(SUFFIX),.c)
+###################################################
+# Use Backward library for tracing the stack in case of crash
+#
+USE_BACKWARD ?= 1
+
+###################################################
+# Check if some variables have been defined
+
+ifndef PROJECT
+$(error PROJECT is not set before including Makefile.header. Give a name to the project.)
+endif
+
+ifndef TARGET
+$(error TARGET is not set before including Makefile.header. Give a name to the executable target.)
+endif
+
+ifndef DESCRIPTION
+$(error DESCRIPTION is not set before including Makefile.header. Please write a small description of your project.)
+endif
+
+ifndef P
+$(error P is not set before including Makefile.header. Set the project root path.)
+endif
+
+ifndef M
+$(error M is not set before including Makefile.header. Set the path of the MyMakefile project.)
+endif
+
+ifndef BUILD_TYPE
+$(error BUILD_TYPE is not set before including Makefile.header. Set it to debug or release.)
+endif
+
+ifndef ARCHI
+$(error ARCHI cannot be set)
+endif
+
+###################################################
+# Shared libraries file extension
+#
+ifeq ($(ARCHI),Darwin)
+SO := dylib
+else ifeq ($(ARCHI),Linux)
+SO := so
+else ifeq ($(ARCHI),Windows)
+SO := dll
+else
+$(error Unknown shared library file extension for this architecture)
+endif
+
+###################################################
+# Define the compilator
+#
+ifeq ($(SUFFIX),.c)
 COMPILER := $(CC)
+else ifeq ($(SUFFIX),.cpp)
+COMPILER := $(CXX) $(STANDARD)
 else
 $(error Supported SUFFIX are .c or .cpp)
 endif
@@ -78,163 +139,9 @@ else
 COMPILER_VERSION :=
 endif
 
+###################################################
 # Convert version number into a integer (ie g++-4.9.2 will return 40902)
+#
 COMPILER_VERSION := $(shell echo $(COMPILER_VERSION) | sed -e 's/\.\([0-9][0-9]\)/\1/g' -e 's/\.\([0-9]\)/0\1/g' -e 's/^[0-9]\{3,4\}$$//')
 
-###################################################
-# Static library
-#
-AR ?= ar
-ARFLAGS ?= crs
-
-###################################################
-# Check if some variables have been defined
-ifndef TARGET
-$(error TARGET is not set. Give a name to the executable target.)
-endif
-
-ifndef PROJECT
-$(error PROJECT is not set. Give a name to the project.)
-endif
-
-ifndef P
-$(error P is not set. This set the project root.)
-endif
-
-###################################################
-# Detect the operating system: Unix, OSX and Windows
-# and give a shorter name if needed.
-#
-ifeq ($(OS),Windows_NT)
-ARCHI := Windows
-else
-ARCHI := $(shell uname -s)
-endif
-
-ifndef ARCHI
-$(error ARCHI cannot be set)
-endif
-
-###################################################
-# Get the project version. Can be used for creating
-# shared libraries.
-#
-TARGET_VERSION := $(shell cat $(P)/VERSION)
-TARGET_MAJOR_VERSION := $(shell cat $(P)/VERSION | cut -d"." -f1)
-TARGET_MINOR_VERSION := $(shell cat $(P)/VERSION | cut -d"." -f2)
-
-###################################################
-# Shared libraries file extension
-#
-ifeq ($(ARCHI),Darwin)
-SO := dylib
-else ifeq ($(ARCHI),Linux)
-SO := so
-else ifeq ($(ARCHI),Windows)
-SO := dll
-else
-$(error Unknown shared library file extension for this architecture)
-endif
-
-###################################################
-# Get project and target names in lower case
-PROJECT_LOWER_CASE := $(shell echo $(PROJECT) | tr A-Z a-z)
-TARGET_LOWER_CASE := $(shell echo $(TARGET) | tr A-Z a-z)
-
-###################################################
-# Define names for static and shared libraries.
-LIB_TARGET := lib$(TARGET_LOWER_CASE)
-SHORT_LIB_TARGET := -l$(TARGET_LOWER_CASE)
-SYMBOLIC_SHARED_LIB_TARGET := $(LIB_TARGET).$(SO).$(TARGET_MAJOR_VERSION)
-SHARED_LIB_TARGET := $(SYMBOLIC_SHARED_LIB_TARGET).$(TARGET_MINOR_VERSION)
-SYMBOLIC_STATIC_LIB_TARGET := $(LIB_TARGET).a
-STATIC_LIB_TARGET := $(SYMBOLIC_STATIC_LIB_TARGET).$(TARGET_VERSION)
-
-###################################################
-# Define names for pkg-config file
-PKG_DIR := /usr/lib/pkgconfig
-PKG_FILE := $(TARGET_LOWER_CASE)-$(TARGET_VERSION).pc
-SYMBOLIC_PKG_FILE := $(TARGET_LOWER_CASE).pc
-
-###################################################
-# Define where to install exec, data, libraries,
-# documentation ...
-#
-BINDIR := $(DESTDIR)$(PREFIX)/bin
-LIBDIR := $(DESTDIR)$(PREFIX)/lib
-DATADIR := $(DESTDIR)$(PREFIX)/share
-INCLDIR := $(DESTDIR)$(PREFIX)/include/$(PROJECT)-$(TARGET_VERSION)
-
-###################################################
-#TODO to be cleaned
-PROJECT_EXE := $(BINDIR)/$(TARGET)-$(TARGET_VERSION)
-PROJECT_DATA_ROOT := $(DATADIR)/$(PROJECT)/$(TARGET_VERSION)
-PROJECT_DATA_PATH := $(PROJECT_DATA_ROOT)/data
-PROJECT_DOC_PATH := $(PROJECT_DATA_ROOT)/$(GENDOC)
-
-###################################################
-# Define and configure the tool asan
-#
-ifeq ($(SANITIZER),)
-SANITIZER := ASAN_OPTIONS=symbolize=1 ASAN_SYMBOLIZER_PATH=$(shell which llvm-symbolizer)
-endif
-
-###################################################
-# Path where to store the generated coverage docs
-#
-COVERAGE_DIR := $(P)/$(GENDOC)/coverage
-# Path where to store lcov rapport
-COVERAGE_RAPPORT := $(BUILD)/rapport.info
-
-###################################################
-# Store files dependencies in *.d files: when a file
-# is modified this will compile others which depend
-# on it.
-#
-DEPFLAGS = -MT $@ -MMD -MP -MF $(BUILD)/$*.Td
-POSTCOMPILE = mv -f $(BUILD)/$*.Td $(BUILD)/$*.d
-
-###################################################
-# Install documentation
-define RULE_INSTALL_DOC
-	@$(call print-to,"Installing","doc","$(PROJECT_DATA_ROOT)","")
-	@cd $(GENDOC) && for d in `find . -type d`; do install -d --mode 755 "$$d" "$(PROJECT_DOC_PATH)/$$d"; done
-	@cd $(GENDOC) && for f in `find . -type f`; do install -D --mode 644 "$$f" "$(PROJECT_DOC_PATH)/$$f"; done
-	@install -m 644 AUTHORS LICENSE README.md ChangeLog $(PROJECT_DATA_ROOT)
-endef
-
-###################################################
-# Install static and dynamic libraries
-define RULE_INSTALL_LIBRARIES
-	@$(call print-to,"Installing","libs","$(LIBDIR)","")
-	@install -m 644 $(BUILD)/$(STATIC_LIB_TARGET) $(LIBDIR)
-	@ln -snf $(LIBDIR)/$(STATIC_LIB_TARGET) $(LIBDIR)/$(SYMBOLIC_STATIC_LIB_TARGET)
-	@install -m 644 $(BUILD)/$(SHARED_LIB_TARGET) $(LIBDIR)
-	@ln -snf $(LIBDIR)/$(SHARED_LIB_TARGET) $(LIBDIR)/$(SYMBOLIC_SHARED_LIB_TARGET)
-	@ln -snf $(LIBDIR)/$(SYMBOLIC_SHARED_LIB_TARGET) $(LIBDIR)/$(LIB_TARGET).$(SO)
-endef
-
-###################################################
-# Install .h and .hpp include files
-define RULE_INSTALL_HEADER_FILES
-	@$(call print-to,"Installing","headers","$(INCLDIR)","")
-	@cd include && for d in `find . -type d`; do install -d --mode 755 "$$d" "$(INCLDIR)/$$d"; done
-	@cd include && for f in `find . -type f`; do install -D --mode 644 "$$f" "$(INCLDIR)/$$f"; done
-endef
-
-###################################################
-# Install the pkg-config file
-define RULE_INSTALL_PKG_CONFIG
-	@$(call print-to,"Installing","pkg-config","/usr/lib/pkgconfig","")
-	@install -m 644 $(BUILD)/$(PKG_FILE) $(PKG_DIR)
-	@ln -snf $(PKG_DIR)/$(PKG_FILE) $(PKG_DIR)/$(SYMBOLIC_PKG_FILE)
-endef
-
-###################################################
-# Define the list of MyMakefile files. Changing them
-# make recompile the whole project
-#
-MYMAKEFILES := Makefile $(M)/Makefile.header $(M)/Makefile.footer	\
-	$(M)/Makefile.color $(M)/Makefile.help $(M)/Makefile.flags
-
-include $(M)/Makefile.flags
+include $(M)/Makefile.macros
