--- a/Makefile.color
+++ b/Makefile.color
@@ -21,6 +21,7 @@
 
 ###################################################
 # Define colors
+#
 CLR_DEFAULT := $(shell echo '\033[00m')
 CLR_RED     := $(shell echo '\033[31m')
 CLR_GREEN   := $(shell echo '\033[32m')
@@ -31,6 +32,7 @@ CLR_CYAN    := $(shell echo '\033[36m')
 
 ###################################################
 # Progress bar
+#
 OBJS_COUNT = $(words $(OBJS))
 CUR_PERCENT = 0
 INC_PERCENT = $(shell echo "100 / $(OBJS_COUNT)" | bc -l)
@@ -40,7 +42,8 @@ $(eval DISP_PERCENT=$(shell echo "($(CUR_PERCENT) + 0.5) / 1" | bc))
 endef
 
 ###################################################
-# Display predefine colorful messages
+# Display predefined colorful messages
+#
 print-simple = \
         echo "$(CLR_PURPLE)*** $1:$(CLR_DEFAULT) $(CLR_CYAN)$2$(CLR_DEFAULT)"
 print-from = \
@@ -53,6 +56,7 @@ print-progress = \
 
 ###################################################
 # Change the verbosity of the makefile.
+#
 ifeq ($(VERBOSE),)
   ifeq ($(V),)
     Q := @
