--- a/Makefile.footer
+++ b/Makefile.footer
@@ -23,6 +23,7 @@ include $(M)/Makefile.flags
 
 ###################################################
 # Link sources
+#
 $(TARGET): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
 	@$(call print-to,"Linking","$(TARGET)","$(BUILD)/$@","$(VERSION)")
 	$(Q)cd $(BUILD) && $(COMPILER) $(OBJS) $(THIRDPART_OBJS) -o $@ $(LDFLAGS)
@@ -33,6 +34,7 @@ endif
 
 ###################################################
 # Compile sources. Note: abspath is needed for gcov
+#
 %.o: %$(SUFFIX) $(BUILD)/%.d $(MYMAKEFILES) version.h
 	@$(call print-progress,"Compiling","$(TARGET)","$<")
 	$(Q)$(COMPILER) $(DEPFLAGS) $(CXXFLAGS) -c $(abspath $<) -o $(abspath $(BUILD)/$@)
@@ -40,6 +42,7 @@ endif
 
 ###################################################
 # Static library
+#
 $(STATIC_LIB_TARGET): CXXFLAGS += -fPIC
 $(STATIC_LIB_TARGET): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
 	@$(call print-to,"Static lib","$(TARGET)","$(BUILD)/$@","$(VERSION)")
@@ -47,6 +50,7 @@ $(STATIC_LIB_TARGET): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
 
 ###################################################
 # Shared library
+#
 $(SHARED_LIB_TARGET): CXXFLAGS += -fPIC
 $(SHARED_LIB_TARGET): LDFLAGS += -shared
 $(SHARED_LIB_TARGET): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
@@ -55,6 +59,7 @@ $(SHARED_LIB_TARGET): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
 
 ###################################################
 # Generate the pkg-config file
+#
 $(PKG_FILE): $(MYMAKEFILES) VERSION
 	@$(call print-to,"Generating","$(TARGET)","$@","")
 	@echo "prefix=$(DESTDIR)$(PREFIX)" > $(BUILD)/$@
@@ -131,7 +136,7 @@ doc:
 
 ###################################################
 # Compress project sources without its .git, $BUILD
-# and $GENDOC generated files. Tarball name confict is
+# and $GENDOC generated files. Tarball name conflict is
 # managed: if a tarball already exists, the older will
 # stay intact and a new one is created.
 #
@@ -147,7 +152,7 @@ version.h: VERSION
 	@./$(M)/version.sh VERSION $(BUILD)/version.h
 
 ###################################################
-# Display the compilator version and informations.
+# Display the compiler version and information.
 .PHONY: which-gcc
 which-gcc:
 	@$(call print-simple,"Version","$(COMPILER)")
@@ -162,6 +167,7 @@ clean:
 
 ###################################################
 # Create a temporary folder to store *.o and *.d files
+#
 $(DEPFILES): | $(BUILD)
 $(PKG_FILE): | $(BUILD)
 $(OBJS): | $(BUILD)
@@ -171,6 +177,7 @@ $(BUILD): which-gcc
 
 ###################################################
 # Auto-Dependency Generation
+#
 $(BUILD)/%.d: ;
 .PRECIOUS: $(BUILD)/%.d
 
