--- a/Makefile.macros
+++ b/Makefile.macros
@@ -142,6 +142,6 @@ endef
 # Define the list of MyMakefile files. Changing them
 # make recompile the whole project
 #
-MYMAKEFILES := $(P)/Makefile $(P)/Makefile.common $(M)/Makefile.header		\
-$(M)/Makefile.footer $(M)/Makefile.color $(M)/Makefile.help $(M)/Makefile.flags	\
+MYMAKEFILES := ./Makefile $(P)/Makefile $(P)/Makefile.common $(M)/Makefile.header \
+$(M)/Makefile.footer $(M)/Makefile.color $(M)/Makefile.help $(M)/Makefile.flags	  \
 $(M)/Makefile.macros
