--- a/Makefile.footer
+++ b/Makefile.footer
@@ -166,8 +166,8 @@ version.h: VERSION
 
 ###################################################
 # Display the compiler version and information.
-.PHONY: which-gcc
-which-gcc:
+.PHONY: which-compiler
+which-compiler:
 	@$(call print-simple,"Version","$(COMPILER)")
 	@$(COMPILER) --version
 
@@ -185,7 +185,7 @@ $(DEPFILES): | $(BUILD)
 $(PKG_FILE): | $(BUILD)
 $(OBJS): | $(BUILD)
 version.h: | $(BUILD)
-$(BUILD): which-gcc
+$(BUILD): which-compiler
 	@mkdir -p $(BUILD)
 
 ###################################################
