Cleaner way to generate the VERSION file if not present

--- a/Makefile.footer
+++ b/Makefile.footer
@@ -184,9 +184,15 @@ clean:
 $(DEPFILES): | $(BUILD)
 $(PKG_FILE): | $(BUILD)
 $(OBJS): | $(BUILD)
-version.h: | $(BUILD)
+version.h: | $(BUILD) VERSION
 $(BUILD): which-compiler
 	@mkdir -p $(BUILD)
+
+###################################################
+# Create a Version file if not present
+#
+VERSION:
+	echo "0.1.0" > VERSION
 
 ###################################################
 # Auto-Dependency Generation
